--- a/templates/permitWatch/permitWatches.html.twig
+++ b/templates/permitWatch/permitWatches.html.twig
@@ -21,6 +21,7 @@
 								<p class="mt-1 max-w-2xl text-sm text-gray-500">{{ permitWatch.targetDate|date('F j, Y') }}</p>
 							</div>
 							<div data-controller="modal" class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white ps-1">
+                                {# TODO: figure out if I should make this a macro instead. So I can use the defaultButton.html.twig #}
 								<button data-action="modal#open" class="w-full text-gray-900 bg-amber-400 hover:bg-amber-500 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center cursor-pointer">
 									Edit
 								</button>
