--- a/templates/permitWatch/permitWatches.html.twig
+++ b/templates/permitWatch/permitWatches.html.twig
@@ -21,10 +21,9 @@
 								<p class="mt-1 max-w-2xl text-sm text-gray-500">{{ permitWatch.targetDate|date('F j, Y') }}</p>
 							</div>
 							<div data-controller="modal" class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white ps-1">
-                                {# TODO: figure out if I should make this a macro instead. So I can use the defaultButton.html.twig #}
-								<button data-action="modal#open" class="w-full text-gray-900 bg-amber-400 hover:bg-amber-500 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center cursor-pointer">
-									Edit
-								</button>
+                                {% import "macros/button/defaultButton.html.twig" as defaultButton %}
+                                {{ defaultButton.defaultButton('modal#open', 'Edit') }}
+
 								{# MODAL #}
 								<dialog 
                                     class="open:flex fixed top-1/3 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-[#013f30] rounded-lg shadow-xl w-full md:w-fit md:max-w-[50%] md:min-w-[50%] m-0 z-50 backdrop:bg-slate-600 backdrop:opacity-60" 
@@ -47,6 +46,7 @@
 									</div>
 								</dialog>
 								{# End Modal #}
+
 							</div>
 							<form action="{{ path('app_permit_watch_delete', {'id': permitWatch.id})}}" method="post" class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white ps-1">
 								<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ permitWatch.id) }}">
