--- a/templates/macros/button/defaultButton.html.twig
+++ b/templates/macros/button/defaultButton.html.twig
@@ -1,4 +1,8 @@
-{% macro defaultButton(dataAction, content, class = "w-full text-gray-900 bg-amber-400 hover:bg-amber-500 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center cursor-pointer") %}
+{% macro defaultButton(
+    dataAction, 
+    content, 
+    class = "w-full text-gray-900 bg-amber-400 hover:bg-amber-500 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center cursor-pointer"
+) %}
     <button data-action="{{ dataAction }}" class="{{ class }}">
         {{ content }}
     </button>
