--- a/templates/permitWatch/permitWatches.html.twig
+++ b/templates/permitWatch/permitWatches.html.twig
@@ -1,4 +1,7 @@
 {% extends 'base.html.twig' %}
+{% import "macros/button/defaultButton.html.twig" as defaultButton %}
+{% import "macros/button/deleteButton.html.twig" as deleteButton %}
+
 
 {% block title %}My Permit Watches
 {% endblock %}
@@ -21,15 +24,10 @@
 								<p class="mt-1 max-w-2xl text-sm text-gray-500">{{ permitWatch.targetDate|date('F j, Y') }}</p>
 							</div>
 							<div data-controller="modal" class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white ps-1">
-                                {% import "macros/button/defaultButton.html.twig" as defaultButton %}
-                                {{ defaultButton.defaultButton('modal#open', 'Edit') }}
+								{{ defaultButton.defaultButton('modal#open', 'Edit') }}
 
 								{# MODAL #}
-								<dialog 
-                                    class="open:flex fixed top-1/3 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-[#013f30] rounded-lg shadow-xl w-full md:w-fit md:max-w-[50%] md:min-w-[50%] m-0 z-50 animate-fade-in backdrop:bg-slate-600 backdrop:opacity-60" 
-                                    data-modal-target="dialog"
-                                    data-action="close->modal#close click->modal#clickOutside"
-                                >
+								<dialog class="open:flex fixed top-1/3 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-[#013f30] rounded-lg shadow-xl w-full md:w-fit md:max-w-[50%] md:min-w-[50%] m-0 z-50 animate-fade-in backdrop:bg-slate-600 backdrop:opacity-60" data-modal-target="dialog" data-action="close->modal#close click->modal#clickOutside">
 									<div class="flex grow p-5">
 										<div class="grow overflow-auto p-1">
 											<div class="text-white space-y-4">
@@ -50,14 +48,19 @@
 							</div>
 							<form action="{{ path('app_permit_watch_delete', {'id': permitWatch.id})}}" method="post" class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white ps-1">
 								<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ permitWatch.id) }}">
-								{% import "macros/button/deleteButton.html.twig" as deleteButton %}
-                                {{ deleteButton.deleteButton('') }}
+								{{ deleteButton.deleteButton('') }}
 							</form>
 						</div>
 					</div>
 				</li>
 			{% endfor %}
 		</ul>
+
+        <div class="shadow-lg overflow-hidden sm:rounded-md max-w-sm mx-auto pt-4">
+            <a href="{{ path('app_permit_watch_new') }}">
+                {{ defaultButton.defaultButton('', 'Add another!') }}
+            </a>
+        </div>
 	{% else %}
 		<h1 class="text-xl md:text-2xl text-white/90 leading-relaxed font-bold bg-clip-text leading-tight justify-center text-center">
 			You have no tracked entry points.
