--- a/templates/permitWatch/permitWatches.html.twig
+++ b/templates/permitWatch/permitWatches.html.twig
@@ -23,38 +23,40 @@
 								</h3>
 								<p class="mt-1 max-w-2xl text-sm text-gray-500">{{ permitWatch.targetDate|date('F j, Y') }}</p>
 							</div>
-							<div data-controller="modal" class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white ps-1">
-								{{ defaultButton.defaultButton('modal#open', 'Edit') }}
+							<div class="flex gap-1">
+								<div data-controller="modal" class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white ps-1">
+									{{ defaultButton.defaultButton('modal#open', 'Edit') }}
 
-								{# MODAL #}
-								<dialog class="open:flex fixed top-1/3 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-[#013f30] rounded-lg shadow-xl w-full md:w-fit md:max-w-[50%] md:min-w-[50%] m-0 z-50 animate-fade-in backdrop:bg-slate-600 backdrop:opacity-60" data-modal-target="dialog" data-action="close->modal#close click->modal#clickOutside">
-									<div class="flex grow p-5">
-										<div class="grow overflow-auto p-1">
-											<div class="text-white space-y-4">
-												<div class="flex justify-between items-center">
-													<h2 class="text-xl font-bold">Edit Permit Watch</h2>
-													<form method="dialog">
-														<button class="text-lg absolute top-5 right-5">
-															<svg xmlns="http://www.w3.org/2000/svg" class="w-4" viewbox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M18 6l-12 12"/><path d="M6 6l12 12"/></svg>
-														</button>
-													</form>
+									{# MODAL #}
+									<dialog class="open:flex fixed top-1/3 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-[#013f30] rounded-lg shadow-xl w-full md:w-fit md:max-w-[50%] md:min-w-[50%] m-0 z-50 animate-fade-in backdrop:bg-slate-600 backdrop:opacity-60" data-modal-target="dialog" data-action="close->modal#close click->modal#clickOutside">
+										<div class="flex grow p-5">
+											<div class="grow overflow-auto p-1">
+												<div class="text-white space-y-4">
+													<div class="flex justify-between items-center">
+														<h2 class="text-xl font-bold">Edit Permit Watch</h2>
+														<form method="dialog">
+															<button class="text-lg absolute top-5 right-5">
+																<svg xmlns="http://www.w3.org/2000/svg" class="w-4" viewbox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M18 6l-12 12"/><path d="M6 6l12 12"/></svg>
+															</button>
+														</form>
+													</div>
+													<twig:EditPermitWatchForm
+														entryPoint="{{ permitWatch.entryPoint }}"
+														targetDate="{{ permitWatch.targetDate|date('Y-m-d') }}"	
+														permitWatch="{{ permitWatch }}"
+													/>
 												</div>
-												<twig:EditPermitWatchForm
-													entryPoint="{{ permitWatch.entryPoint }}"
-													targetDate="{{ permitWatch.targetDate|date('Y-m-d') }}"	
-													permitWatch="{{ permitWatch }}"
-												/>
 											</div>
 										</div>
-									</div>
-								</dialog>
-								{# End Modal #}
+									</dialog>
+									{# End Modal #}
 
+								</div>
+								<form action="{{ path('app_permit_watch_delete', {'id': permitWatch.id})}}" method="post" class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white ps-1">
+									<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ permitWatch.id) }}">
+									{{ deleteButton.deleteButton('') }}
+								</form>
 							</div>
-							<form action="{{ path('app_permit_watch_delete', {'id': permitWatch.id})}}" method="post" class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white ps-1">
-								<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ permitWatch.id) }}">
-								{{ deleteButton.deleteButton('') }}
-							</form>
 						</div>
 					</div>
 				</li>
