--- a/templates/email/permit_alert.html.twig
+++ b/templates/email/permit_alert.html.twig
@@ -10,13 +10,10 @@
                 display: inline-block;
                 margin-top: 10px;
                 padding: 10px 15px;
-                background-color: #28a745;
-                color: #fff;
+                background-color: #ffb900;
+                color: #151c27;
                 text-decoration: none;
                 border-radius: 5px;
-            }
-            a:hover {
-                background-color: #218838;
             }
         </style>
     </head>
