--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,7 @@
         {% block importmap %}{{ importmap('app') }}{% endblock %}
     {% endblock %}
 </head>
-<body class="bg-cover bg-center bg-no-repeat bg-fixed" style="background-image: url('{{ asset('images/site_background.jpg') }}');">
+<body class="bg-cover bg-center bg-no-repeat bg-fixed" style="background-image: url('{{ asset('images/site_background.webp') }}');">
     <div class="flex flex-col min-h-screen bg-emerald-900/95">
         <header class="backdrop-blur-sm bg-white/5 border-b border-white/10 shadow-lg sticky top-0 z-50">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
